--- a/.env
+++ b/.env
@@ -9,3 +9,8 @@ FLASK_ENV=development
 # Server Configuration
 HOST=127.0.0.1
 PORT=5000
+
+# Device Configuration for Attendance Data
+DEVICE_IP=192.168.11.253
+DEVICE_PORT=4370
+DEVICE_URL=http://192.168.11.253/
