Implement Local Sync Agent for Biometric Device Connectivity
PROBLEM SOLVED:
- Coolify-deployed app cannot reach private IPs (192.168.x.x)
- Biometric devices fail to connect from cloud environment
- Direct device sync impossible from outside LAN

SOLUTION IMPLEMENTED:
âœ… Local Sync Agent Architecture
âœ… Secure API endpoint for log uploads
âœ… HMAC-SHA256 authentication
âœ… Comprehensive error handling and logging

NEW FEATURES:
- /api/sync_logs endpoint with signature verification
- Local Python sync agent (sync_agent/attendance_sync_agent.py)
- Configurable device management (config.ini)
- Automatic retry logic and batch processing
- Production-ready logging and monitoring

SECURITY:
- HMAC signatures prevent unauthorized uploads
- SYNC_SECRET environment variable for authentication
- HTTPS-only communication to cloud app
- No inbound connections required

DEPLOYMENT:
- Flask app: Deploy to Coolify with SYNC_SECRET env var
- Sync agent: Run on local network computer
- Devices: Remain on private network (192.168.11.253/254)
- Logs: Sync every 5 minutes automatically

FILES ADDED:
- sync_agent/attendance_sync_agent.py (main agent)
- sync_agent/config.example.ini (configuration template)
- sync_agent/requirements.txt (Python dependencies)
- sync_agent/README.md (setup instructions)
- DEPLOYMENT_GUIDE.md (complete deployment guide)

CONFIGURATION:
- Added SYNC_SECRET and ENABLE_DIRECT_DEVICE_SYNC to config
- Updated .env with sync authentication settings
- Disabled direct device connections for production

Ready for production deployment to Coolify!

--- a/.env
+++ b/.env
@@ -10,7 +10,10 @@ FLASK_ENV=development
 HOST=127.0.0.1
 PORT=5000
 
-# Device Configuration for Attendance Data
+# Device Configuration for Attendance Data (Legacy - now handled by sync agent)
 DEVICE_IP=192.168.11.253
 DEVICE_PORT=4370
 DEVICE_URL=http://192.168.11.253/
+
+# Sync Agent Authentication
+SYNC_SECRET=everlast-sync-secret-key-2024-change-in-production
