--- a/requirements.txt
+++ b/requirements.txt
@@ -23,6 +23,7 @@ pyzk==0.9
 Flask-Session==0.8.0
 Flask-Migrate==4.0.5
 openpyxl==3.1.2
+reportlab==4.2.5
 pytz==2025.2
 requests==2.31.0
 gunicorn==23.0.0
